Add index argument to most of the array functions